# Practical_Task_completed

./: .env  chainlit.md  pyproject.toml
Open Router/openrouter/: pyproject.toml  requirements.txt
Open Router/openrouter/src/openrouter/: main.py
litellm-openai-agent/01- litellm/src/litellmopenaiagent/: __init__.py
litellm-openai-agent/01l- litellm/: pyproject.toml  requirements.txt
litellm-openai-agent/01l- litellm/src/litellmopenaiagent/: main.py
