[project]
name = "openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areeba Bano", email = "161935706+areebabano@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
openrouter = "openrouter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
